# kr-bitpanda

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/api/: private.rs  public.rs
src/data/: best_fee_collection.rs  crypto_wallet.rs  fiat_wallet.rs  fiat_wallet_transactions.rs  mod.rs  ticker.rs  trades.rs
test/assets/: crypto_wallets.json  fiat_wallet_transactions.json  fiat_wallets.json  ticker-2021-02.json  ticker.json  trades.json
