[package]
name = "kr-bitpanda"
version = "0.1.0"
authors = ["Sebastian Krämer <basti.kr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "json" ] }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rust_decimal = "1.10"
