[package]
name = "kr-bitpanda"
version = "0.1.0"
authors = ["Sebastian Krämer <basti.kr@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Client library for the bitpanda REST API "
readme = "README.md"
homepage = "https://github.com/bastikr/kr-bitpanda"
repository = "https://github.com/bastikr/kr-bitpanda"
categories = ["cryptography::cryptocurrencies"]


[dependencies]
reqwest = { version = "0.11", features = [ "json" ] }
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
rust_decimal = "1.10"
